<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LogDump</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_filter_tag_dialog">Enter tag filters</string>
    <string name="title_filter_app_dialog">Choose app filters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_section">Add Filter</string>
    <string name="action_delete_section">Delete Filter</string>
    <string name="filter_dialog_ok">Add</string>
    <string name="filter_dialog_cancel">Cancel</string>
    <string name="action_refresh">Refresh</string>
    <string name="delete_btn_description">Delete</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_home">Home</string>
</resources>
