<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_pause" android:title="@string/action_pause"
        android:icon="@android:drawable/ic_media_pause"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_filter" android:title="@string/action_filter"
        android:icon="@drawable/ic_menu_filter"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_home" android:title="@string/action_home"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
